tests/new_spread/new_spread.exp
Error ------------------------------------------------------------------------------------------ cross_module/app.js:4:9

Cannot call `app` with object literal bound to the first parameter because in property `a`: string [1] is incompatible
with number [2]. [incompatible-type]

   cross_module/app.js:4:9
   4| app({a: 'foo', b: 2});
              ^^^^^ [1]

References:
   cross_module/app.js:3:24
   3| const app = fn((o: {a: number, b: number, ...}) => {});
                             ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------ cross_module/use.js:3:9

Cannot call `app` with object literal bound to the first parameter because in property `a`: string [1] is incompatible
with number [2]. [incompatible-type]

   cross_module/use.js:3:9
   3| app({a: 'foo', b: 2});
              ^^^^^ [1]

References:
   cross_module/app.js:6:65
   6| export default fn((o: {a: number, b: number, ...}) => {}) as {a:number, b:number} => void;
                                                                      ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- no_interfaces.js:13:1

Cannot call `spread` because Flow cannot determine a type for object type [1]. `B` [2] cannot be spread because
interfaces do not track the own-ness of their properties. Try using an object type instead. [cannot-spread-interface]

   no_interfaces.js:13:1
   13| spread<A, B>(a, b); // Error, can't spread interface
       ^^^^^^

References:
   no_interfaces.js:6:78
    6| function spread<A extends interface {}, B extends interface {}>(x: A, y: B): {...A, ...B, ...} {
                                                                                    ^^^^^^^^^^^^^^^^^ [1]
   no_interfaces.js:13:11
   13| spread<A, B>(a, b); // Error, can't spread interface
                 ^ [2]


Error ------------------------------------------------------------------------------------------- no_interfaces.js:15:10

Flow cannot determine a type for object type [1]. `B` [2] cannot be spread because interfaces do not track the own-ness
of their properties. Try using an object type instead. [cannot-spread-interface]

   no_interfaces.js:15:10
   15| type X = {...A, ...B, ...}; // Error, can't spread interface
                ^^^^^^^^^^^^^^^^^ [1]

References:
   no_interfaces.js:15:20
   15| type X = {...A, ...B, ...}; // Error, can't spread interface
                          ^ [2]


Error ------------------------------------------------------------------------------------------- no_interfaces.js:20:10

Flow cannot determine a type for object type [1]. `A` [2] cannot be spread because interfaces do not track the own-ness
of their properties. Try using an object type instead. [cannot-spread-interface]

   no_interfaces.js:20:10
   20| type Y = {...A, foo: number, ...}; // Error, can't spread interface
                ^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   no_interfaces.js:20:14
   20| type Y = {...A, foo: number, ...}; // Error, can't spread interface
                    ^ [2]


Error ------------------------------------------------------------------------------------------- no_interfaces.js:24:10

Flow cannot determine a type for object type [1]. `A` [2] cannot be spread because interfaces do not track the own-ness
of their properties. Try using an object type instead. [cannot-spread-interface]

   no_interfaces.js:24:10
   24| type Z = {foo: number, ...A, ...}; // Error, can't spread interface
                ^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   no_interfaces.js:24:27
   24| type Z = {foo: number, ...A, ...}; // Error, can't spread interface
                                 ^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:14:2

Cannot cast object literal to `O1` because property `p` is missing in object literal [1] but exists in object type [2].
[incompatible-type]

   type.js:14:2
   14| ({} as O1); // error
        ^^ [1]

References:
   type.js:14:8
   14| ({} as O1); // error
              ^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:16:5

Cannot cast object literal to `O1` because in property `p`: `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type.js:16:5
   16| ({p:y} as O1); // error: y ~> T
           ^

References:
   type.js:5:18
    5| declare const y: U;
                        ^ [1]
   type.js:10:18
   10| type O1 = {...{p:T, ...}, ...};
                        ^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:23:1

Cannot cast `o2` to object type because in property `p`: `void | T` [1] is not exactly the same as `T` [2].
[incompatible-type]

The above-mentioned two types must be the same because property `p` is invariantly typed. To fix the error,
- Either make `{p?: T, ...}` [3] and `{p: T, ...}` [4] exactly the same
- Or make property `p` in object type [4] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   type.js:23:1
   23| o2 as {p:T, ...}; // error: o2.p is optional
       ^^

References:
   type.js:20:19
   20| type O2 = {...{p?:T, ...}, ...};
                         ^ [1]
   type.js:23:10
   23| o2 as {p:T, ...}; // error: o2.p is optional
                ^ [2]
   type.js:20:11
   20| type O2 = {...{p?:T, ...}, ...};
                 ^^^^^^^^^^^^^^^^^^^^^ [3]
   type.js:23:7
   23| o2 as {p:T, ...}; // error: o2.p is optional
             ^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- type.js:26:5

Cannot cast object literal to `O2` because in property `p`: `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type.js:26:5
   26| ({p:y} as O2); // error: y ~> T
           ^

References:
   type.js:5:18
    5| declare const y: U;
                        ^ [1]
   type.js:20:19
   20| type O2 = {...{p?:T, ...}, ...};
                         ^ [2]


Error ---------------------------------------------------------------------------------------------------- type.js:30:15

Inexact object type [1] is incompatible with exact object type [2]. [incompatible-exact]

   type.js:30:15
   30| type O3 = {...{p:T, ...}}; ({p:x} as O3); // error: spread result is not exact
                     ^^^^^^^^^^ [1]

References:
   type.js:30:11
   30| type O3 = {...{p:T, ...}}; ({p:x} as O3); // error: spread result is not exact
                 ^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:36:1

Cannot cast `o4` to object type because inexact object type [1] is incompatible with exact object type [2].
[incompatible-exact]

   type.js:36:1
   36| o4 as {p:T}; // error: not exact
       ^^

References:
   type.js:34:19
   34| declare const o4: O4;
                         ^^ [1]
   type.js:36:7
   36| o4 as {p:T}; // error: not exact
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:37:8

Cannot cast `{...}` to `O4` because property `p` is missing in object type [1] but exists in object type [2].
[incompatible-type]

   type.js:37:8
   37| ({} as {...}) as O4; // error: property `p` not found
              ^^^^^ [1]

References:
   type.js:37:18
   37| ({} as {...}) as O4; // error: property `p` not found
                        ^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:39:5

Cannot cast object literal to `O4` because in property `p`: `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type.js:39:5
   39| ({p:y} as O4); // error: y ~> T
           ^

References:
   type.js:5:18
    5| declare const y: U;
                        ^ [1]
   type.js:33:18
   33| type O4 = {...{p:T}, ...};
                        ^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:47:1

Cannot cast `nil` to `O5` because property `p` is missing in object type [1] but exists in object type [2].
[incompatible-type]

   type.js:47:1
   47| nil as O5; // error: property `p` not found
       ^^^

References:
   type.js:7:20
    7| declare const nil: {};
                          ^^ [1]
   type.js:47:8
   47| nil as O5; // error: property `p` not found
              ^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:49:5

Cannot cast object literal to `O5` because in property `p`: `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type.js:49:5
   49| ({p:y} as O5); // error: y ~> T
           ^

References:
   type.js:5:18
    5| declare const y: U;
                        ^ [1]
   type.js:43:18
   43| type O5 = {...{p:T}};
                        ^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:50:2

Cannot cast object literal to `O5` because property `q` is extra in object literal [1] but missing in object type [2].
Exact objects do not accept extra props. [incompatible-type]

   type.js:50:2
   50| ({p:x,q:y} as O5); // error: additional property `q` found
        ^^^^^^^^^ [1]

References:
   type.js:50:15
   50| ({p:x,q:y} as O5); // error: additional property `q` found
                     ^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:56:8

Cannot cast `{...}` to `O6` because property `p` is missing in object type [1] but exists in object type [2].
[incompatible-type]

   type.js:56:8
   56| ({} as {...}) as O6; // error: property `p` not found
              ^^^^^ [1]

References:
   type.js:56:18
   56| ({} as {...}) as O6; // error: property `p` not found
                        ^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:57:5

Cannot cast object literal to `O6` because in property `p`: `T` [1] is incompatible with `U` [2]. [incompatible-type]

   type.js:57:5
   57| ({p:x} as O6); // error: x ~> U
           ^

References:
   type.js:2:18
    2| declare const x: T;
                        ^ [1]
   type.js:53:32
   53| type O6 = {...{p:T, ...},...{p:U}, ...};
                                      ^ [2]


Error ---------------------------------------------------------------------------------------------------- type.js:62:15

Inexact object type [1] is incompatible with exact object type [2]. [incompatible-exact]

   type.js:62:15
   62| type O7 = {...{p:T, ...},...{p:U}}; ({p:y} as O7);// error: spread result is not exact
                     ^^^^^^^^^^ [1]

References:
   type.js:62:11
   62| type O7 = {...{p:T, ...},...{p:U}}; ({p:y} as O7);// error: spread result is not exact
                 ^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:68:1

Cannot cast `o8.p` to `T` because `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type.js:68:1
   68| o8.p as T; // error: U ~> T
       ^^^^

References:
   type.js:65:27
   65| type O8 = {...{p:T},...{p:U, ...}, ...};
                                 ^ [1]
   type.js:68:9
   68| o8.p as T; // error: U ~> T
               ^ [2]


Error ----------------------------------------------------------------------------------------------------- type.js:74:1

Cannot cast `o9` to object type because in property `p`: `T` [1] is not exactly the same as `void | T` [2].
[incompatible-type]

The above-mentioned two types must be the same because property `p` is invariantly typed. To fix the error,
- Either make `{p: T, q: U, ...}` [3] and `{p?: T, q: U, ...}` [4] exactly the same
- Or make property `p` in object type [4] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   type.js:74:1
   74| o9 as {p?:T,q:U, ...};
       ^^

References:
   type.js:72:18
   72| type O9 = {...{p:T, ...},...{q:U}, ...};
                        ^ [1]
   type.js:74:11
   74| o9 as {p?:T,q:U, ...};
                 ^ [2]
   type.js:72:11
   72| type O9 = {...{p:T, ...},...{q:U}, ...};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   type.js:74:7
   74| o9 as {p?:T,q:U, ...};
             ^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------------- type.js:79:12

Flow cannot determine a type for object type [1]. object type [2] is inexact, so it may contain `p` with a type that
conflicts with `p`'s definition in object type [3]. Try making object type [2] exact. [cannot-spread-inexact]

   type.js:79:12
   79| type O10 = {...{p:T},...{q:U, ...}, ...}; // Error, p may exist in second object
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   type.js:79:25
   79| type O10 = {...{p:T},...{q:U, ...}, ...}; // Error, p may exist in second object
                               ^^^^^^^^^^ [2]
   type.js:79:16
   79| type O10 = {...{p:T},...{q:U, ...}, ...}; // Error, p may exist in second object
                      ^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- type.js:84:12

Flow cannot determine a type for object type [1]. object type [2] is inexact, so it may contain `p` with a type that
conflicts with `p`'s definition in object type [3]. Try making object type [2] exact. [cannot-spread-inexact]

   type.js:84:12
   84| type O11 = {...{p:T, ...},...{q:U, ...}, ...}; // Error, p may exist in second object
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   type.js:84:30
   84| type O11 = {...{p:T, ...},...{q:U, ...}, ...}; // Error, p may exist in second object
                                    ^^^^^^^^^^ [2]
   type.js:84:16
   84| type O11 = {...{p:T, ...},...{q:U, ...}, ...}; // Error, p may exist in second object
                      ^^^^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- type.js:105:5

Cannot cast object literal to `O14` because in property `p`: `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type.js:105:5
   105| ({p:y} as O14); // error: U ~> T
            ^

References:
   type.js:5:18
     5| declare const y: U;
                         ^ [1]
   type.js:99:23
    99| type O14 = {...{...{p:T}, ...}, ...};
                              ^ [2]


Error ---------------------------------------------------------------------------------------------------- type.js:106:2

Cannot cast object literal to `O14` because property `p` is missing in object literal [1] but exists in object type [2].
[incompatible-type]

   type.js:106:2
   106| ({} as O14); // error
         ^^ [1]

References:
   type.js:106:8
   106| ({} as O14); // error
               ^^^ [2]


Error ----------------------------------------------------------------------------------------------- type_contra.js:6:1

Cannot cast `o1` to object type because in property `p`: `mixed` [1] is not exactly the same as `void | T` [2].
[incompatible-type]

The above-mentioned two types must be the same because property `p` is invariantly typed. To fix the error,
- Either make `{p: mixed, ...}` [3] and `{p?: T, ...}` [4] exactly the same
- Or make property `p` in object type [4] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   type_contra.js:6:1
   6| o1 as {p?:T, ...}; // error: unknown ~> T
      ^^

References:
   type_contra.js:3:15
   3| type O1 = {...{-p:T, ...}, ...};
                    ^^^^^^^^^^^ [1]
   type_contra.js:6:11
   6| o1 as {p?:T, ...}; // error: unknown ~> T
                ^ [2]
   type_contra.js:3:11
   3| type O1 = {...{-p:T, ...}, ...};
                ^^^^^^^^^^^^^^^^^^^^^ [3]
   type_contra.js:6:7
   6| o1 as {p?:T, ...}; // error: unknown ~> T
            ^^^^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------- type_contra.js:7:1

Cannot cast `o1.p` to `T` because property `p` of unknown type [1] is incompatible with `T` [2]. [incompatible-type]

   type_contra.js:7:1
   7| o1.p as T; // errors: undefined ~> T, unknown ~> T
      ^^^^

References:
   type_contra.js:3:15
   3| type O1 = {...{-p:T, ...}, ...};
                    ^^^^^^^^^^^ [1]
   type_contra.js:7:9
   7| o1.p as T; // errors: undefined ~> T, unknown ~> T
              ^ [2]


Error ---------------------------------------------------------------------------------------------- type_contra.js:12:1

Cannot cast `o2` to object type because in the indexer property: `mixed` [1] is not exactly the same as `T` [2].
[incompatible-type]

The above-mentioned two types must be the same because the indexer is invariantly typed. To fix the error,
- Either make `{[string]: mixed}` [3] and `{[string]: T}` [4] exactly the same
- Or make the indexer in object type [4] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   type_contra.js:12:1
   12| o2 as {[string]:T}; // error: unknown ~> T
       ^^

References:
   type_contra.js:9:15
    9| type O2 = {...{-[string]:T}, ...};
                     ^^^^^^^^^^^^^ [1]
   type_contra.js:12:17
   12| o2 as {[string]:T}; // error: unknown ~> T
                       ^ [2]
   type_contra.js:9:11
    9| type O2 = {...{-[string]:T}, ...};
                 ^^^^^^^^^^^^^^^^^^^^^^^ [3]
   type_contra.js:12:7
   12| o2 as {[string]:T}; // error: unknown ~> T
             ^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------------- type_contra.js:13:1

Cannot cast `o2.p` to `T` because computed property of unknown type [1] is incompatible with `T` [2].
[incompatible-type]

   type_contra.js:13:1
   13| o2.p as T; // errors: unknown ~> T
       ^^^^

References:
   type_contra.js:9:15
    9| type O2 = {...{-[string]:T}, ...};
                     ^^^^^^^^^^^^^ [1]
   type_contra.js:13:9
   13| o2.p as T; // errors: unknown ~> T
               ^ [2]


Error ---------------------------------------------------------------------------------------------- type_contra.js:18:1

Cannot cast `o3` to object type because in property `p`: `mixed` [1] is not exactly the same as `T` [2].
[incompatible-type]

The above-mentioned two types must be the same because property `p` is invariantly typed. To fix the error,
- Either make `{p: mixed, ...}` [1] and `{p: T, ...}` [3] exactly the same
- Or make property `p` in object type [3] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   type_contra.js:18:1
   18| o3 as {p:T, ...}; // error: unknown ~> T
       ^^

References:
   type_contra.js:15:11
   15| type O3 = {...{}, -p: T, ...};
                 ^^^^^^^^^^^^^^^^^^^ [1]
   type_contra.js:18:10
   18| o3 as {p:T, ...}; // error: unknown ~> T
                ^ [2]
   type_contra.js:18:7
   18| o3 as {p:T, ...}; // error: unknown ~> T
             ^^^^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------- type_contra.js:19:1

Cannot cast `o3.p` to `T` because property `p` of unknown type [1] is incompatible with `T` [2]. [incompatible-type]

   type_contra.js:19:1
   19| o3.p as T; // errors: unknown ~> T
       ^^^^

References:
   type_contra.js:15:11
   15| type O3 = {...{}, -p: T, ...};
                 ^^^^^^^^^^^^^^^^^^^ [1]
   type_contra.js:19:9
   19| o3.p as T; // errors: unknown ~> T
               ^ [2]


Error ------------------------------------------------------------------------------------------------ type_dict.js:4:19

Flow cannot determine a type for object type [1]. object type [2] is inexact and may have a property key that conflicts
with string [3] or a property value that conflicts with `T` [4]. Try making object type [2] exact.
[cannot-spread-inexact]

   type_dict.js:4:19
   4| declare const o1: {...{[string]:T},...{p:U, ...}, ...}; // Error, can't spread because inexact may clash with T
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   type_dict.js:4:39
   4| declare const o1: {...{[string]:T},...{p:U, ...}, ...}; // Error, can't spread because inexact may clash with T
                                            ^^^^^^^^^^ [2]
   type_dict.js:4:25
   4| declare const o1: {...{[string]:T},...{p:U, ...}, ...}; // Error, can't spread because inexact may clash with T
                              ^^^^^^ [3]
   type_dict.js:4:33
   4| declare const o1: {...{[string]:T},...{p:U, ...}, ...}; // Error, can't spread because inexact may clash with T
                                      ^ [4]


Error ------------------------------------------------------------------------------------------------ type_empty.js:3:1

Cannot cast `42` to `O` because number [1] is incompatible with empty [2]. [incompatible-type]

   type_empty.js:3:1
   3| 42 as O; // Error: number ~> empty
      ^^ [1]

References:
   type_empty.js:3:7
   3| 42 as O; // Error: number ~> empty
            ^ [2]


Error ------------------------------------------------------------------------------------------------ type_empty.js:7:3

Cannot cast `x` to number because object type [1] is incompatible with number [2]. [incompatible-type]

   type_empty.js:7:3
   7|   x as number; // Error: mixed ~> number,
        ^

References:
   type_empty.js:6:20
   6| function fn1<T>(x: {...T, ...}) {
                         ^^^^^^^^^^^ [1]
   type_empty.js:7:8
   7|   x as number; // Error: mixed ~> number,
             ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- type_empty.js:12:6

Cannot call `fn` with object literal bound to the first parameter because object literal [1] is incompatible with
`{ ...T }` [2]. [incompatible-type]

   type_empty.js:12:6
   12|   fn({}); // Error: object ~> empty
            ^^ [1]

References:
   type_empty.js:11:22
   11| function fn2<T>(fn: ({...T, ...}) => void) {
                            ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- type_generic.js:3:11

Cannot cast `spread(...)` to object type because in property `p`: number [1] is incompatible with empty [2].
[incompatible-type]

   type_generic.js:3:11
   3| spread({p:0},{q:0}) as {+p:empty,+q:empty}; // number ~> empty (x2)
                ^ [1]

References:
   type_generic.js:3:28
   3| spread({p:0},{q:0}) as {+p:empty,+q:empty}; // number ~> empty (x2)
                                 ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- type_generic.js:3:17

Cannot cast `spread(...)` to object type because in property `q`: number [1] is incompatible with empty [2].
[incompatible-type]

   type_generic.js:3:17
   3| spread({p:0},{q:0}) as {+p:empty,+q:empty}; // number ~> empty (x2)
                      ^ [1]

References:
   type_generic.js:3:37
   3| spread({p:0},{q:0}) as {+p:empty,+q:empty}; // number ~> empty (x2)
                                          ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- type_instance.js:6:1

Cannot cast `o1` to object type because in property `p`: `number & (string | number)` [1] is not exactly the same as
`void | number` [2]. [incompatible-type]

The above-mentioned two types must be the same because property `p` is invariantly typed. To fix the error,
- Either make `{p: number & (string | number), ...}` [3] and `{p?: number, ...}` [4] exactly the same
- Or make property `p` in object type [4] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   type_instance.js:6:1
   6| o1 as {p?:number, ...}; // Error
      ^^

References:
   type_instance.js:4:15
   4| type O1 = {...B, ...};
                    ^ [1]
   type_instance.js:6:11
   6| o1 as {p?:number, ...}; // Error
                ^^^^^^ [2]
   type_instance.js:2:7
   2| class B extends A {p: number}
            ^ [3]
   type_instance.js:6:7
   6| o1 as {p?:number, ...}; // Error
            ^^^^^^^^^^^^^^^^ [4]


Error ---------------------------------------------------------------------------------------- type_intersection.js:15:6

Cannot cast object literal to `O2` because in property `p`: `A` [1] is incompatible with `B` [2]. [incompatible-type]

   type_intersection.js:15:6
   15| ({p: new A} as O2); // error: A ~> B
            ^^^^^ [1]

References:
   type_intersection.js:11:29
   11| type O2 = {...{p:A, ...}&{p:B, ...}, ...};
                                   ^ [2]


Error ------------------------------------------------------------------------------------------------ type_mixed.js:3:4

Cannot get `o1.someProp` because property `someProp` is missing in object type [1]. [prop-missing]

   type_mixed.js:3:4
   3| o1.someProp as empty; // Error someProp does not exist
         ^^^^^^^^

References:
   type_mixed.js:2:19
   2| declare const o1: O1;
                        ^^ [1]


Error ------------------------------------------------------------------------------------------------ type_mixed.js:7:1

Cannot cast `o2.someProp` to empty because `void` (due to access of non-existent property `someProp`) [1] is
incompatible with empty [2]. [incompatible-type]

   type_mixed.js:7:1
   7| o2.someProp as empty; // Error someProp does not exist
      ^^^^^^^^^^^ [1]

References:
   type_mixed.js:7:16
   7| o2.someProp as empty; // Error someProp does not exist
                     ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ type_mixed.js:7:4

Cannot get `o2.someProp` because property `someProp` is missing in object type [1]. [prop-missing]

   type_mixed.js:7:4
   7| o2.someProp as empty; // Error someProp does not exist
         ^^^^^^^^

References:
   type_mixed.js:6:19
   6| declare const o2: O2;
                        ^^ [1]


Error ----------------------------------------------------------------------------------------------- type_mixed.js:11:1

Cannot cast `o3.a` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   type_mixed.js:11:1
   11| o3.a as empty; // Error: number ~> empty
       ^^^^

References:
   type_mixed.js:9:31
    9| type O3 = {...unknown, ...{a: number, b?: number}, ...};
                                     ^^^^^^ [1]
   type_mixed.js:11:9
   11| o3.a as empty; // Error: number ~> empty
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- type_mixed.js:12:1

Cannot cast `o3.b` to empty because number [1] is incompatible with empty [2]. [incompatible-type]

   type_mixed.js:12:1
   12| o3.b as empty; // Error: mixed ~> empty, number ~> empty, and undefined ~> empty
       ^^^^

References:
   type_mixed.js:9:43
    9| type O3 = {...unknown, ...{a: number, b?: number}, ...};
                                                 ^^^^^^ [1]
   type_mixed.js:12:9
   12| o3.b as empty; // Error: mixed ~> empty, number ~> empty, and undefined ~> empty
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- type_mixed.js:12:1

Cannot cast `o3.b` to empty because undefined [1] is incompatible with empty [2]. [incompatible-type]

   type_mixed.js:12:1
   12| o3.b as empty; // Error: mixed ~> empty, number ~> empty, and undefined ~> empty
       ^^^^

References:
   type_mixed.js:9:43
    9| type O3 = {...unknown, ...{a: number, b?: number}, ...};
                                                 ^^^^^^ [1]
   type_mixed.js:12:9
   12| o3.b as empty; // Error: mixed ~> empty, number ~> empty, and undefined ~> empty
               ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- type_mixed.js:13:4

Cannot get `o3.c` because property `c` is missing in object type [1]. [prop-missing]

   type_mixed.js:13:4
   13| o3.c as empty; // Error c does not exist
          ^

References:
   type_mixed.js:10:19
   10| declare const o3: O3;
                         ^^ [1]


Error ----------------------------------------------------------------------------------------------- type_mixed.js:16:7

Cannot get `obj.someProp` because property `someProp` is missing in object type [1]. [prop-missing]

   type_mixed.js:16:7
   16|   obj.someProp as empty; // Error someProp does not exist
             ^^^^^^^^

References:
   type_mixed.js:15:21
   15| function fn<O>(obj: {...O, ...}) {
                           ^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- type_string.js:1:15

string literal `foo` [1] is not an object. [not-an-object]

   1| type O1 = {..."foo", ...}; // Error
                    ^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- type_union.js:14:19

Flow cannot determine a type for object type [1]. object type [2] cannot be spread because the indexer number [3] may
overwrite properties with explicit keys in a way that Flow cannot track. Try spreading object type [2] first or remove
the indexer. [cannot-spread-indexer]

   type_union.js:14:19
   14| declare const x1: {...Union1, ...Union2, ...}; // Error, indexer on right
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   type_union.js:14:34
   14| declare const x1: {...Union1, ...Union2, ...}; // Error, indexer on right
                                        ^^^^^^ [2]
   type_union.js:12:33
   12| type Union2 = {bar: number} | {[number]: string};
                                       ^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------- type_union.js:17:19

Flow cannot determine a type for object type [1]. object type [2] is inexact, so it may contain `foo` with a type that
conflicts with `foo`'s definition in object type [3]. Try making object type [2] exact. [cannot-spread-inexact]

   type_union.js:17:19
   17| declare const x5: {...Union1, ...{...}, ...} // Error, spreading {} overwrites indexer
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   type_union.js:17:34
   17| declare const x5: {...Union1, ...{...}, ...} // Error, spreading {} overwrites indexer
                                        ^^^^^ [2]
   type_union.js:17:23
   17| declare const x5: {...Union1, ...{...}, ...} // Error, spreading {} overwrites indexer
                             ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------- type_union.js:20:5

Cannot assign object literal to `y` because object literal [1] is incompatible with `U` [2]. [incompatible-type]

   type_union.js:20:5
   20| y = {}; // unsealed
           ^^ [1]

References:
   type_union.js:5:16
    5| declare let y: U;
                      ^ [2]


Error ---------------------------------------------------------------------------------------------- type_union.js:37:19

Flow cannot determine a type for object type [1]. `I1` [2] cannot be spread because interfaces do not track the own-ness
of their properties. Try using an object type instead. [cannot-spread-interface]

   type_union.js:37:19
   37| declare const x4: {...Union5, ...};  // Error, cannot spread interface
                         ^^^^^^^^^^^^^^^^ [1]

References:
   type_union.js:37:23
   37| declare const x4: {...Union5, ...};  // Error, cannot spread interface
                             ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:10:1

Cannot cast `o1` to object type because inexact object type [1] is incompatible with exact object type [2].
[incompatible-exact]

   type_void.js:10:1
   10| o1 as {}; // error
       ^^

References:
   type_void.js:8:19
    8| declare const o1: O1;
                         ^^ [1]
   type_void.js:10:7
   10| o1 as {}; // error
             ^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:11:1

Cannot cast `o1` to object type because property `p` is missing in object type [1] but exists in object type [2].
[incompatible-type]

   type_void.js:11:1
   11| o1 as {p:T, ...}; // error
       ^^

References:
   type_void.js:8:19
    8| declare const o1: O1;
                         ^^ [1]
   type_void.js:11:7
   11| o1 as {p:T, ...}; // error
             ^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:19:1

Cannot cast `o2` to object type because property `p` is missing in object type [1] but exists in object type [2].
[incompatible-type]

   type_void.js:19:1
   19| o2 as {p:T, ...}; // error
       ^^

References:
   type_void.js:16:19
   16| declare const o2: O2;
                         ^^ [1]
   type_void.js:19:7
   19| o2 as {p:T, ...}; // error
             ^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:21:2

Cannot cast object literal to `O2` because property `p` is extra in object literal [1] but missing in object type [2].
Exact objects do not accept extra props. [incompatible-type]

   type_void.js:21:2
   21| ({p:x} as O2); // error
        ^^^^^ [1]

References:
   type_void.js:21:11
   21| ({p:x} as O2); // error
                 ^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:26:1

Cannot cast `o3` to object type because inexact object type [1] is incompatible with exact object type [2].
[incompatible-exact]

   type_void.js:26:1
   26| o3 as {}; // error
       ^^

References:
   type_void.js:24:19
   24| declare const o3: O3;
                         ^^ [1]
   type_void.js:26:7
   26| o3 as {}; // error
             ^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:27:1

Cannot cast `o3` to object type because property `p` is missing in object type [1] but exists in object type [2].
[incompatible-type]

   type_void.js:27:1
   27| o3 as {p:T, ...}; // error
       ^^

References:
   type_void.js:24:19
   24| declare const o3: O3;
                         ^^ [1]
   type_void.js:27:7
   27| o3 as {p:T, ...}; // error
             ^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:35:1

Cannot cast `o4` to object type because property `p` is missing in object type [1] but exists in object type [2].
[incompatible-type]

   type_void.js:35:1
   35| o4 as {p:T, ...}; // error
       ^^

References:
   type_void.js:32:19
   32| declare const o4: O4;
                         ^^ [1]
   type_void.js:35:7
   35| o4 as {p:T, ...}; // error
             ^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:37:2

Cannot cast object literal to `O4` because property `p` is extra in object literal [1] but missing in object type [2].
Exact objects do not accept extra props. [incompatible-type]

   type_void.js:37:2
   37| ({p:x} as O4); // error
        ^^^^^ [1]

References:
   type_void.js:37:11
   37| ({p:x} as O4); // error
                 ^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:43:2

Cannot cast object literal to `O5` because property `p` is missing in object literal [1] but exists in object type [2].
[incompatible-type]

   type_void.js:43:2
   43| ({} as O5); // error
        ^^ [1]

References:
   type_void.js:43:8
   43| ({} as O5); // error
              ^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:45:5

Cannot cast object literal to `O5` because in property `p`: `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type_void.js:45:5
   45| ({p:y} as O5); // error: y ~> T
           ^

References:
   type_void.js:5:18
    5| declare const y: U;
                        ^ [1]
   type_void.js:39:27
   39| type O5 = {...void, ...{p:T, ...}, ...};
                                 ^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:50:1

Cannot cast `o6` to object type because in property `p`: `T` [1] is not exactly the same as `void | T` [2].
[incompatible-type]

The above-mentioned two types must be the same because property `p` is invariantly typed. To fix the error,
- Either make `{p: T, ...}` [3] and `{p?: T, ...}` [4] exactly the same
- Or make property `p` in object type [4] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   type_void.js:50:1
   50| o6 as {p?:T, ...}; // error, void doesn't overwrite p
       ^^

References:
   type_void.js:48:18
   48| type O6 = {...{p:T, ...}, ...void, ...};
                        ^ [1]
   type_void.js:50:11
   50| o6 as {p?:T, ...}; // error, void doesn't overwrite p
                 ^ [2]
   type_void.js:48:11
   48| type O6 = {...{p:T, ...}, ...void, ...};
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]
   type_void.js:50:7
   50| o6 as {p?:T, ...}; // error, void doesn't overwrite p
             ^^^^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------------ type_void.js:52:2

Cannot cast object literal to `O6` because property `p` is missing in object literal [1] but exists in object type [2].
[incompatible-type]

   type_void.js:52:2
   52| ({} as O6); // error
        ^^ [1]

References:
   type_void.js:52:8
   52| ({} as O6); // error
              ^^ [2]


Error ------------------------------------------------------------------------------------------------ type_void.js:54:5

Cannot cast object literal to `O6` because in property `p`: `U` [1] is incompatible with `T` [2]. [incompatible-type]

   type_void.js:54:5
   54| ({p:y} as O6); // error: y ~> T
           ^

References:
   type_void.js:5:18
    5| declare const y: U;
                        ^ [1]
   type_void.js:48:18
   48| type O6 = {...{p:T, ...}, ...void, ...};
                        ^ [2]



Found 66 errors
